// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MarkerChart EmptyReasons shows a reason when a profile has no markers 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    This thread contains no markers for this chart.
  </p>
</div>
`;

exports[`MarkerChart EmptyReasons shows a reason when a profile's markers have been filtered out 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    All markers were filtered out by the current selection or search term.
  </p>
</div>
`;

exports[`MarkerChart context menus displays when right clicking on a marker 1`] = `
<nav
  class="react-contextmenu markerContextMenu react-contextmenu--visible"
  role="menu"
  style="position: fixed; opacity: 1; pointer-events: auto; top: 27px; left: 153px;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconSetSelectionFromMarker"
    />
    Set selection from marker’s duration
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconStartSelectionAtMarkerStart"
    />
    <div
      class="react-contextmenu-item-content"
    >
      Start selection at marker’s 
      <strong>
        start
      </strong>
    </div>
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconStartSelectionAtMarkerEnd"
    />
    <div
      class="react-contextmenu-item-content"
    >
      Start selection at marker’s 
      <strong>
        end
      </strong>
    </div>
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconEndSelectionAtMarkerStart"
    />
    <div
      class="react-contextmenu-item-content"
    >
      End selection at marker’s 
      <strong>
        start
      </strong>
    </div>
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconEndSelectionAtMarkerEnd"
    />
    <div
      class="react-contextmenu-item-content"
    >
      End selection at marker’s 
      <strong>
        end
      </strong>
    </div>
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconOverrideZeroAtMarkerStart"
    />
    Align the timeline start with the marker start
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconCopyDescription"
    />
    Copy description
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="react-contextmenu-icon markerContextMenuIconCopyPayload"
    />
    Copy as JSON
  </div>
</nav>
`;

exports[`MarkerChart persists the selected marker tooltips properly 1`] = `
<div
  class="tooltip clickable"
  data-testid="tooltip"
  style="left: 186px; top: 150px;"
>
  <div
    class="tooltipMarker"
  >
    <div
      class="tooltipHeader"
    >
      <div
        class="tooltipOneLine"
      >
        <div
          class="tooltipTiming"
        >
          6ms
        </div>
        <div
          class="tooltipTitle"
        >
          <span
            class="tooltipTitleText"
          >
            Marker B
          </span>
          <button
            aria-label="Only show markers matching: “⁨Marker B⁩”"
            class="tooltipTitleFilterButton"
            title="Only show markers matching: “⁨Marker B⁩”"
            type="button"
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Description
        :
      </div>
      <div
        class="tooltipDetailsDescription"
      >
        UserTiming is created using the DOM APIs performance.mark() and performance.measure().
      </div>
      <div
        class="tooltipLabel"
      >
        Name
        :
      </div>
      Marker B
      <div
        class="tooltipLabel"
      >
        Entry Type
        :
      </div>
      measure
      <div
        class="tooltipLabel"
      >
        Track
        :
      </div>
      Empty
    </div>
  </div>
</div>
`;

exports[`MarkerChart renders the hoveredItem markers properly 1`] = `
Array [
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "#fff",
  ],
  Array [
    "fillRect",
    0,
    128,
    365,
    15,
  ],
  Array [
    "set fillStyle",
    "rgba(40, 122, 169, 0.2)",
  ],
  Array [
    "fillRect",
    0,
    128,
    365,
    15,
  ],
  Array [
    "save",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    150,
    0,
    200,
    300,
  ],
  Array [
    "clip",
  ],
  Array [
    "set fillStyle",
    "#0060df",
  ],
  Array [
    "set strokeStyle",
    "#002275",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    172.5,
    129.5,
    66,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "Marker B",
    175,
    139,
  ],
  Array [
    "restore",
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    143,
    350,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    " (1)",
  ],
  Array [
    "fillText",
    "UserTiming (1)",
    5,
    139,
  ],
]
`;

exports[`MarkerChart renders the hoveredItem markers properly 2`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 186px; top: 150px;"
>
  <div
    class="tooltipMarker"
  >
    <div
      class="tooltipHeader"
    >
      <div
        class="tooltipOneLine"
      >
        <div
          class="tooltipTiming"
        >
          6ms
        </div>
        <div
          class="tooltipTitle"
        >
          <span
            class="tooltipTitleText"
          >
            Marker B
          </span>
          <button
            aria-label="Only show markers matching: “⁨Marker B⁩”"
            class="tooltipTitleFilterButton"
            title="Only show markers matching: “⁨Marker B⁩”"
            type="button"
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Description
        :
      </div>
      <div
        class="tooltipDetailsDescription"
      >
        UserTiming is created using the DOM APIs performance.mark() and performance.measure().
      </div>
      <div
        class="tooltipLabel"
      >
        Name
        :
      </div>
      Marker B
      <div
        class="tooltipLabel"
      >
        Entry Type
        :
      </div>
      measure
      <div
        class="tooltipLabel"
      >
        Track
        :
      </div>
      Empty
    </div>
  </div>
</div>
`;

exports[`MarkerChart renders the normal marker chart and matches the snapshot 1`] = `
<div
  aria-labelledby="marker-chart-tab-button"
  class="markerChart"
  id="marker-chart-tab"
  role="tabpanel"
>
  <div
    class="markerSettings"
  >
    <ul
      class="panelSettingsList"
    >
      <li
        class="panelSettingsListItem"
      >
        <span
          class="stackImplementationSettingLabel"
        >
          Filter stacks:
        </span>
        <label
          class="photon-label photon-label-micro"
          for="implementation-radio-combined"
        >
          <input
            checked=""
            class="photon-radio photon-radio-micro"
            id="implementation-radio-combined"
            title="Do not filter the stack frames"
            type="radio"
            value="combined"
          />
          <span
            class="photon-label-horiz-padding"
          >
            All frames
          </span>
        </label>
        <label
          class="photon-label photon-label-micro"
          for="implementation-radio-js"
        >
          <input
            class="photon-radio photon-radio-micro"
            id="implementation-radio-js"
            title="Show only the stack frames related to script execution"
            type="radio"
            value="js"
          />
          <span
            class="photon-label-horiz-padding"
          >
            Script
          </span>
        </label>
        <label
          class="photon-label photon-label-micro"
          for="implementation-radio-cpp"
        >
          <input
            class="photon-radio photon-radio-micro"
            id="implementation-radio-cpp"
            title="Show only the stack frames for native code"
            type="radio"
            value="cpp"
          />
          <span
            class="photon-label-horiz-padding"
          >
            Native
          </span>
        </label>
      </li>
    </ul>
    <div
      class="panelSearchField markerSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter Markers: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display markers that match a certain name"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
      </label>
      <div
        class="panelSearchFieldIntroduction isHidden"
      >
        Did you know you can use the comma (,) to search using several terms?
      </div>
    </div>
    <button
      class="filterMarkersButton photon-button photon-button-ghost"
      disabled=""
      title="Marker Filters"
      type="button"
    />
    <div>
      <nav
        class="react-contextmenu markerFiltersContextMenu"
        role="menu"
        style="position: fixed; opacity: 0; pointer-events: none;"
        tabindex="-1"
      >
        <div
          aria-disabled="false"
          class="react-contextmenu-item"
          role="menuitem"
          tabindex="-1"
        >
          Drop samples outside of markers matching “
          <strong>
            ⁨⁩
          </strong>
          ”
        </div>
      </nav>
    </div>
    <div>
      <nav
        class="react-contextmenu markerCopyTableContextMenu"
        role="menu"
        style="position: fixed; opacity: 0; pointer-events: none;"
        tabindex="-1"
      >
        <div
          aria-disabled="false"
          class="react-contextmenu-item"
          role="menuitem"
          tabindex="-1"
        >
          Copy marker table as plain text
        </div>
        <div
          aria-disabled="false"
          class="react-contextmenu-item"
          role="menuitem"
          tabindex="-1"
        >
          Copy marker table as Markdown
        </div>
      </nav>
    </div>
  </div>
  <div
    class="react-contextmenu-wrapper treeViewContextMenu"
  >
    <div
      class="chartViewport"
      tabindex="0"
    >
      <div>
        <canvas
          class="chartCanvas markerChartCanvas"
          height="600"
          style="width: 365px; height: 300px;"
          width="730"
        />
      </div>
      <div
        class="chartViewportScroll hidden"
      >
        Zoom Chart:
        <kbd
          class="chartViewportScrollKbd"
        >
          Ctrl + Scroll
        </kbd>
        or
        <kbd
          class="chartViewportScrollKbd"
        >
          Shift + Scroll
        </kbd>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarkerChart renders the normal marker chart and matches the snapshot 2`] = `
Array [
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    2,
    2,
  ],
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "save",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    150,
    0,
    200,
    300,
  ],
  Array [
    "clip",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    190.75,
    23.5,
  ],
  Array [
    "lineTo",
    194.5,
    17.5,
  ],
  Array [
    "lineTo",
    198.25,
    23.5,
  ],
  Array [
    "lineTo",
    194.5,
    29.5,
  ],
  Array [
    "closePath",
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    150.5,
    33.5,
    110,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    272.5,
    33.5,
    65.5,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    150.5,
    49.5,
    110,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    206,
    65.5,
    54.5,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "measureText",
    "click",
  ],
  Array [
    "set fillStyle",
    "black",
  ],
  Array [
    "fillText",
    "click",
    208.5,
    75,
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    250.5,
    81.5,
    10,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    150.5,
    97.5,
    32.5,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    224.25,
    119.5,
  ],
  Array [
    "lineTo",
    228,
    113.5,
  ],
  Array [
    "lineTo",
    231.75,
    119.5,
  ],
  Array [
    "lineTo",
    228,
    125.5,
  ],
  Array [
    "closePath",
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    172.5,
    129.5,
    65.5,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "measureText",
    "Marker B",
  ],
  Array [
    "set fillStyle",
    "black",
  ],
  Array [
    "fillText",
    "Marker B",
    175,
    139,
  ],
  Array [
    "set fillStyle",
    "#8ac4ff",
  ],
  Array [
    "set strokeStyle",
    "#2c77d1",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "rect",
    206,
    145.5,
    110,
    12,
  ],
  Array [
    "fill",
  ],
  Array [
    "stroke",
  ],
  Array [
    "restore",
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    63,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    79,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    95,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    111,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    127,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    143,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    159,
    350,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    "Dot marker E",
  ],
  Array [
    "fillText",
    "Dot marker E",
    5,
    27,
  ],
  Array [
    "measureText",
    "Marker A",
  ],
  Array [
    "fillText",
    "Marker A",
    5,
    43,
  ],
  Array [
    "measureText",
    "Marker G type DOMEvent",
  ],
  Array [
    "fillText",
    "Marker G type DOMEvent",
    5,
    75,
  ],
  Array [
    "measureText",
    "Marker H with no end",
  ],
  Array [
    "fillText",
    "Marker H with no end",
    5,
    91,
  ],
  Array [
    "measureText",
    "Marker H with no start",
  ],
  Array [
    "fillText",
    "Marker H with no start",
    5,
    107,
  ],
  Array [
    "measureText",
    "Non-interval marker F without data",
  ],
  Array [
    "measureText",
    "Non-interval marker F withou",
  ],
  Array [
    "fillText",
    "Non-interval marker F withou…",
    5,
    123,
  ],
  Array [
    "measureText",
    "UserTiming",
  ],
  Array [
    "fillText",
    "UserTiming",
    5,
    139,
  ],
  Array [
    "measureText",
    "Very very very very very very Very very very very very very Very very very very very very Very very very very very very Very very very very very very long Marker D",
  ],
  Array [
    "measureText",
    "Very very very very very ver",
  ],
  Array [
    "fillText",
    "Very very very very very ver…",
    5,
    155,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    0,
    -1,
    350,
    16,
  ],
  Array [
    "set fillStyle",
    "#d7d7db",
  ],
  Array [
    "fillRect",
    0,
    -1,
    350,
    1,
  ],
  Array [
    "fillRect",
    0,
    15,
    350,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Other",
    155,
    11,
  ],
]
`;

exports[`MarkerChart sets a correct size for the marker chart even when dPR is non-integer 1`] = `
<canvas
  class="chartCanvas markerChartCanvas"
  height="327"
  style="width: 364.83333333333337px; height: 299.75px;"
  width="398"
/>
`;
